fixed links and spacing

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ tr:hover {
   background-color: #f5f5f5;
 }
 
-a:link, a:visited {
+a:link, a:visited, a:active {
   color: black;
 }
 
